--- a/LogicaDeProgramação/listaDeExercícios/index.html
+++ b/LogicaDeProgramação/listaDeExercícios/index.html
@@ -109,7 +109,8 @@
         }
       }
 
-      //Nesta function coloquei as váriaveis de todos os exercícios, acho que não era assim que o professor queria, mas já que não instalamos o node ainda, fiz dessa maneira pra rodar no navegador
+      /*Nesta function coloquei as váriaveis de todos os exercícios, acho que não era assim que o professor queria, mas já que não instalamos o node ainda, fiz dessa maneira pra rodar no navegador*/
+
       function executaExercícios() {
         ex1(),
           ex2(1, 2, 3),
