--- a/ProjetoIntegrador/tela4.html
+++ b/ProjetoIntegrador/tela4.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
@@ -19,6 +20,7 @@
           </ul>
         </nav>
       </aside>
+
       <div id="usuarioCNPJ">
         <label for="">Endereço</label>
         <input type="text" />
@@ -32,6 +34,26 @@
         <input type="number" />
         <label for="">CEP</label>
         <input type="number" />
+      </div>
+
+      <div id="caracteristicasProduto">
+        <h2>Caracteristicas de Produto</h2>
+
+        <p>Nome:</p>
+        <input type="text" />
+        <p>Ingredientes:</p>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <h3>Tabela Nutricional</h3>
+        <p>Fotos</p>
+        <h2>Formas de Pagamento</h2>
+        <section>
+          <label for="">Cartão</label>
+          <input type="checkbox" name="" id="" />
+          <label for="">Pix</label>
+          <input type="checkbox" name="" id="" />
+          <label for="">Cupom</label>
+          <input type="checkbox" name="" id="" />
+        </section>
       </div>
     </main>
   </body>
