--- a/ProjetoIntegrador/tela4.html
+++ b/ProjetoIntegrador/tela4.html
@@ -10,7 +10,9 @@
   <body>
     <main>
       <aside>
-        <div id="fotoPerfil"></div>
+        <div id="fotoPerfil">
+          <img src="imgs/logo.jpg" alt="" />
+        </div>
         <nav>
           <ul>
             <li>Incluir</li>
@@ -22,18 +24,57 @@
       </aside>
 
       <div id="usuarioCNPJ">
-        <label for="">Endereço</label>
-        <input type="text" />
-        <label for="">Rua</label>
-        <input type="text" />
-        <label for="">Estado</label>
-        <input type="text" />
-        <label for="">Cidade</label>
-        <input type="text" />
-        <label for="">N°</label>
-        <input type="number" />
-        <label for="">CEP</label>
-        <input type="number" />
+        <div id="endereco">
+          <h2>Endereço</h2>
+          <label for="">Rua</label>
+          <input type="text" />
+          <label for="">Estado</label>
+          <select name="estados" id="">
+            <option value=""></option>
+            <option value="">AC</option>
+            <option value="">AL</option>
+            <option value="">AP</option>
+            <option value="">AM</option>
+            <option value="">BA</option>
+            <option value="">CE</option>
+            <option value="">ES</option>
+            <option value="">GO</option>
+            <option value="">MA</option>
+            <option value="">MT</option>
+            <option value="">MS</option>
+            <option value="">MG</option>
+            <option value="">PA</option>
+            <option value="">PB</option>
+            <option value="">PR</option>
+            <option value="">PE</option>
+            <option value="">PI</option>
+            <option value="">RJ</option>
+            <option value="">RN</option>
+            <option value="">RS</option>
+            <option value="">RO</option>
+            <option value="">RR</option>
+            <option value="">SC</option>
+            <option value="">SP</option>
+            <option value="">SE</option>
+            <option value="">TO</option>
+          </select>
+          <label for="">Cidade</label>
+          <input type="text" />
+          <label for="">N°</label>
+          <input type="number" />
+          <label for="">CEP</label>
+          <input type="number" />
+        </div>
+
+        <div id="tipoDeAtendimento">
+          <h2>Tipo de Atendimento</h2>
+          <label for="">Retirada</label>
+          <input type="checkbox" name="" id="" />
+          <label for="">Delivery</label>
+          <input type="checkbox" name="" id="" />
+          <label for="">Consumo no local</label>
+          <input type="checkbox" name="" id="" />
+        </div>
       </div>
 
       <div id="caracteristicasProduto">
