--- a/ProjetoIntegrador/tela8.html
+++ b/ProjetoIntegrador/tela8.html
@@ -9,31 +9,98 @@
   </head>
   <body>
     <main>
-      <label for="">Crédito</label>
-      <input type="checkbox" name="" id="" />
-      <label for="">Débito</label>
-      <input type="checkbox" name="" id="" />
+      <section id="formaDePagamento">
+        <h2>Forma de Pagamento</h2>
+        <label for="">Crédito</label>
+        <input type="checkbox" name="" id="" />
+        <label for="">Débito</label>
+        <input type="checkbox" name="" id="" />
 
-      <p>Número do cartão:</p>
-      <input type="text" name="" id="" />
-      <p>Nome no cartão:</p>
-      <input type="text" name="" id="" />
+        <p>Número do cartão:</p>
+        <input type="text" name="" id="" />
+        <p>Nome no cartão:</p>
+        <input type="text" name="" id="" />
 
-      <p>Validade</p>
-      <select name="" id="">
-        <option value="">Mes</option>
-      </select>
-      <select name="" id="">
-        <option value="">Ano</option>
-      </select>
+        <p>Validade</p>
+        <select name="" id="">
+          <option value="">Mes</option>
+          <option value="">Janeiro</option>
+          <option value="">Fevereiro</option>
+          <option value="">Março</option>
+          <option value="">Abril</option>
+          <option value="">Maio</option>
+          <option value="">Junho</option>
+          <option value="">Julho</option>
+          <option value="">Agosto</option>
+          <option value="">Setembro</option>
+          <option value="">Outubro</option>
+          <option value="">Novembro</option>
+          <option value="">Dezembro</option>
+        </select>
+        <select name="" id="">
+          <option value="">Ano</option>
+        </select>
 
-      <p>Código de Segurança</p>
-      <input type="text" name="" id="" />
+        <p>Código de Segurança</p>
+        <input type="text" name="" id="" />
 
-      <p>Chave PIX</p>
-      <input type="text" name="" id="" />
+        <p>Chave PIX</p>
+        <input type="text" name="" id="" />
+      </section>
 
-      <input type="button" value="Finalizar" />
+      <section id="carrinho">
+        <h2>Carrinho</h2>
+        <div class="produto">
+          <div>
+            <img src="imgs/x-burguer.jpg" alt="" />
+          </div>
+
+          <div>
+            <h3>Produto</h3>
+            <p>Descrição</p>
+          </div>
+
+          <div>
+            <p>Quantidade</p>
+            <input type="number" name="" id="" />
+          </div>
+        </div>
+
+        <div class="produto">
+          <div>
+            <img src="imgs/x-burguer.jpg" alt="" />
+          </div>
+
+          <div>
+            <h3>Produto</h3>
+            <p>Descrição</p>
+          </div>
+
+          <div>
+            <p>Quantidade</p>
+            <input type="number" name="" id="" />
+          </div>
+        </div>
+      </section>
+
+      <section id="finalizar">
+        <div>
+          <label for="">Entregar</label>
+          <input type="checkbox" name="" id="" />
+          <label for="">Buscar</label>
+          <input type="checkbox" name="" id="" />
+        </div>
+
+        <div>
+          <label for="">Entrega: 0</label>
+          <label for="">Total: $$</label>
+        </div>
+
+        <div>
+          <input type="button" value="Cancelar" />
+          <input type="button" value="Finalizar" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
