--- a/LogicaDeProgramação/listaDeExercícios/lista3.html
+++ b/LogicaDeProgramação/listaDeExercícios/lista3.html
@@ -64,13 +64,73 @@
         let arr = [n1, n2, n3, n4, n5]
         console.log(Math.max(...arr))
       }
-      function ex10() {}
-      function ex11() {}
-      function ex12() {}
-      function ex13() {}
-      function ex14() {}
+      function ex10(n) {
+        console.log(n ** 3)
+      }
+      function ex11(sMin, sal) {
+        console.log(sal / sMin)
+      }
+      function ex12(n1, n2, n3, f) {
+        let media = (n1 + n2 + n3) / 3
+        if (media >= 7 && 80 / f >= 4) {
+          console.log('Aprovado')
+        } else {
+          console.log('Reprovado')
+        }
+      }
+      function ex13(preco) {
+        if (preco <= 20) {
+          console.log(preco * 1.45)
+        } else {
+          console.log(preco * 1.3)
+        }
+      }
+      function ex14(preco, parcelas) {
+        let resp = [
+          'Pagamento deve ser realizado à vista.',
+          'Pagamento deve ser realizado em 2 parcelas.',
+          'Pagamento deve ser realizado em 3 parcelas.',
+          'Pagamento deve ser realizado em 5 parcelas.',
+          'Pagamento deve ser realizado em 6 parcelas.'
+        ]
+        if (preco <= 100) {
+          console.log(resp[0])
+        } else if (preco > 100 && preco <= 300) {
+          console.log(resp[1])
+        } else if (preco > 300 && preco <= 500) {
+          console.log(resp[2])
+        } else if (preco > 500 && preco <= 900) {
+          console.log(resp[3])
+        } else if (preco > 900 && preco <= 1000) {
+          console.log(resp[4])
+        } else {
+          console.log(`"Seu
+      pagamento será realizado em ${parcelas} parcelas`)
+        }
+      }
       function ex15() {}
-      function ex16() {}
+      function ex16() {
+        let A = 2
+        let B = 3
+        let C = 10
+        console.log(!(A > B))
+        console.log(!(B < C))
+        console.log(A < B && C > B)
+        console.log(A < B && C < B)
+        console.log(A > B && C > B)
+        console.log(A > B && C < B)
+        console.log(A < B && C > B && A > 0)
+        console.log(A < B && C > B && A < 0)
+        console.log(A < B || C > B)
+        console.log(A < B || C < B)
+        console.log(A > B || C > B)
+        console.log(A > B || C < B)
+        console.log((A < B && C > B) || A > 0)
+        console.log(A < B || C > B || A < 0)
+        console.log(!(A < B && C > B))
+        console.log(!A < B && C > B)
+        console.log(!(A > B) && C > B)
+      }
 
       function executaExercícios() {
         ex1(10),
@@ -82,11 +142,11 @@
           ex7(1),
           ex8(5, 20, 100),
           ex9(1, 2, 7, 3, 4),
-          ex10(),
-          ex11(),
-          ex12(),
-          ex13(),
-          ex14(),
+          ex10(3),
+          ex11(1200, 3600),
+          ex12(10, 9, 8, 20),
+          ex13(20),
+          ex14(1001, 10),
           ex15(),
           ex16()
       }
