--- a/DSW01/formulario/index.html
+++ b/DSW01/formulario/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <form action="mailto:felipe.crema.ribeiro@gmail.com">
+      <form id="myForm" action="mailto:felipe.crema.ribeiro@gmail.com">
         <fieldset>
           <legend>AAA</legend>
           <label for="nome">Nome:</label>
