--- a/DSW01/grid/TREINO/index.html
+++ b/DSW01/grid/TREINO/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <nav id="one"></nav>
-    <main></main>
-    <nav id="two"></nav>
-    <footer></footer>
+    <div class="container">
+      <header></header>
+      <nav></nav>
+      <main></main>
+      <footer></footer>
+    </div>
   </body>
 </html>
