--- a/ProjetoIntegrador/html/3.html
+++ b/ProjetoIntegrador/html/3.html
@@ -19,28 +19,31 @@
           <label>CNPJ</label>
             <input type="radio" id="pj" name="documento" value="CNPJ">
           </div>
-        <form>
+        <form action="#" id="form">
           <div class="form-group">
-            <input type="text" required><label>Email</label>
+            <input name="email" type="text" required><label>Email</label>
           </div>
           <div class="form-group">
-            <input type="password" required id="senha"><label>Senha</label>
+            <input name="senha" type="password" required id="senha"><label>Senha</label>
           </div>
           <div class="form-group">
-            <input type="text" required><label>Nome Completo</label>
+            <input name="nomeCompleto" type="text" required><label>Nome Completo</label>
           </div>
           <div class="form-group">
-            <input type="number" required><label>CNPJ</label>
+            <input name="cnpj" type="number" required><label>CNPJ</label>
           </div>
           <div class="form-group">
-            <input type="text" required><label>Nome da Empresa</label>
+            <input name="nomeEmpresa" type="text" required><label>Nome da Empresa</label>
           </div>
           <div class="form-group">
-            <input type="number" required><label>Telefone</label>
+            <input name="telefone" type="number" required><label>Telefone</label>
           </div>
           <input type="button" value="Entrar" class="submit" onclick="comparar()">
         </form>
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="../js/register.js"></script>
   </body>
   </html>
