--- a/ProjetoIntegrador/html/4.html
+++ b/ProjetoIntegrador/html/4.html
@@ -21,80 +21,95 @@
           </ul>
         </nav>
       </aside>
+      <form action="#" id="form">
+        <div id="usuarioCNPJ">
+          <div id="endereco">
+            <h2>Endereço</h2>
+            <label for="">Rua</label>
+            <input type="text" name="rua" />
+            <label for="">Estado</label>
+            <select name="estado" id="">
+              <option value=""></option>
+              <option value="">AC</option>
+              <option value="">AL</option>
+              <option value="">AP</option>
+              <option value="">AM</option>
+              <option value="">BA</option>
+              <option value="">CE</option>
+              <option value="">ES</option>
+              <option value="">GO</option>
+              <option value="">MA</option>
+              <option value="">MT</option>
+              <option value="">MS</option>
+              <option value="">MG</option>
+              <option value="">PA</option>
+              <option value="">PB</option>
+              <option value="">PR</option>
+              <option value="">PE</option>
+              <option value="">PI</option>
+              <option value="">RJ</option>
+              <option value="">RN</option>
+              <option value="">RS</option>
+              <option value="">RO</option>
+              <option value="">RR</option>
+              <option value="">SC</option>
+              <option value="">SP</option>
+              <option value="">SE</option>
+              <option value="">TO</option>
+            </select>
+            <label for="">Cidade</label>
+            <input type="text" name="cidade" />
+            <label for="">N°</label>
+            <input type="number" name="numeroCasa" />
+            <label for="">CEP</label>
+            <input type="number" name="cep" maxlength="8" />
+          </div>
 
-      <div id="usuarioCNPJ">
-        <div id="endereco">
-          <h2>Endereço</h2>
-          <label for="">Rua</label>
-          <input type="text" />
-          <label for="">Estado</label>
-          <select name="estados" id="">
-            <option value=""></option>
-            <option value="">AC</option>
-            <option value="">AL</option>
-            <option value="">AP</option>
-            <option value="">AM</option>
-            <option value="">BA</option>
-            <option value="">CE</option>
-            <option value="">ES</option>
-            <option value="">GO</option>
-            <option value="">MA</option>
-            <option value="">MT</option>
-            <option value="">MS</option>
-            <option value="">MG</option>
-            <option value="">PA</option>
-            <option value="">PB</option>
-            <option value="">PR</option>
-            <option value="">PE</option>
-            <option value="">PI</option>
-            <option value="">RJ</option>
-            <option value="">RN</option>
-            <option value="">RS</option>
-            <option value="">RO</option>
-            <option value="">RR</option>
-            <option value="">SC</option>
-            <option value="">SP</option>
-            <option value="">SE</option>
-            <option value="">TO</option>
-          </select>
-          <label for="">Cidade</label>
-          <input type="text" />
-          <label for="">N°</label>
-          <input type="number" />
-          <label for="">CEP</label>
-          <input type="number" />
+          <div id="tipoDeAtendimento">
+            <h2>Tipo de Atendimento</h2>
+            <label for="">Retirada</label>
+            <input type="checkbox" name="tipoDeAtendimento" id="" />
+            <label for="">Delivery</label>
+            <input type="checkbox" name="tipoDeAtendimento" id="" />
+            <label for="">Consumo no local</label>
+            <input type="checkbox" name="tipoDeAtendimento" id="" />
+          </div>
         </div>
 
-        <div id="tipoDeAtendimento">
-          <h2>Tipo de Atendimento</h2>
-          <label for="">Retirada</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Delivery</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Consumo no local</label>
-          <input type="checkbox" name="" id="" />
+        <div id="caracteristicasProduto">
+          <h2>Caracteristicas de Produto</h2>
+
+          <p>Nome:</p>
+          <input type="text" />
+          <p>Ingredientes:</p>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <h3>Tabela Nutricional</h3>
+          <p>Fotos</p>
+          <h2>Formas de Pagamento</h2>
+          <section>
+            <label for="">Cartão</label>
+            <input
+              type="checkbox"
+              name="formaDePagamento"
+              id=""
+              maxlength="16"
+            />
+            <label for="">Pix</label>
+            <input
+              type="checkbox"
+              name="formaDePagamento"
+              id=""
+              maxlength="32"
+            />
+            <label for="">Cupom</label>
+            <input type="checkbox" name="formaDePagamento" id="" />
+          </section>
         </div>
-      </div>
-
-      <div id="caracteristicasProduto">
-        <h2>Caracteristicas de Produto</h2>
-
-        <p>Nome:</p>
-        <input type="text" />
-        <p>Ingredientes:</p>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <h3>Tabela Nutricional</h3>
-        <p>Fotos</p>
-        <h2>Formas de Pagamento</h2>
-        <section>
-          <label for="">Cartão</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Pix</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Cupom</label>
-          <input type="checkbox" name="" id="" />
-        </section>
-      </div>
+        <button type="submit">Teste</button>
+      </form>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="../js/register.js"></script>
   </body>
 </html>
