--- a/ProjetoIntegrador/html/8.html
+++ b/ProjetoIntegrador/html/8.html
@@ -8,98 +8,103 @@
   </head>
   <body>
     <main>
-      <section id="formaDePagamento">
-        <h2>Forma de Pagamento</h2>
-        <label for="">Crédito</label>
-        <input type="checkbox" name="" id="" />
-        <label for="">Débito</label>
-        <input type="checkbox" name="" id="" />
+      <form action="#" id="form">
+        <section id="formaDePagamento">
+          <h2>Forma de Pagamento</h2>
+          <label for="">Crédito</label>
+          <input type="radio" name="formaDePagamento" id="" />
+          <label for="">Débito</label>
+          <input type="radio" name="formaDePagamento" id="" />
 
-        <p>Número do cartão:</p>
-        <input type="text" name="" id="" />
-        <p>Nome no cartão:</p>
-        <input type="text" name="" id="" />
+          <p>Número do cartão:</p>
+          <input type="text" name="numeroCartao" id="" />
+          <p>Nome no cartão:</p>
+          <input type="text" name="nomeCartao" id="" />
 
-        <p>Validade</p>
-        <select name="" id="">
-          <option value="">Mes</option>
-          <option value="">Janeiro</option>
-          <option value="">Fevereiro</option>
-          <option value="">Março</option>
-          <option value="">Abril</option>
-          <option value="">Maio</option>
-          <option value="">Junho</option>
-          <option value="">Julho</option>
-          <option value="">Agosto</option>
-          <option value="">Setembro</option>
-          <option value="">Outubro</option>
-          <option value="">Novembro</option>
-          <option value="">Dezembro</option>
-        </select>
-        <select name="" id="">
-          <option value="">Ano</option>
-        </select>
+          <p>Validade</p>
+          <select name="mesExpiraçao" id="">
+            <option value="">Mes</option>
+            <option value="">Janeiro</option>
+            <option value="">Fevereiro</option>
+            <option value="">Março</option>
+            <option value="">Abril</option>
+            <option value="">Maio</option>
+            <option value="">Junho</option>
+            <option value="">Julho</option>
+            <option value="">Agosto</option>
+            <option value="">Setembro</option>
+            <option value="">Outubro</option>
+            <option value="">Novembro</option>
+            <option value="">Dezembro</option>
+          </select>
+          <select name="mesExpiraçao" id="">
+            <option value="">Ano</option>
+          </select>
 
-        <p>Código de Segurança</p>
-        <input type="text" name="" id="" />
+          <p>Código de Segurança</p>
+          <input type="text" name="numeroSeguranca" id="" />
 
-        <p>Chave PIX</p>
-        <input type="text" name="" id="" />
-      </section>
+          <p>Chave PIX</p>
+          <input type="text" name="pix" id="" />
+        </section>
 
-      <section id="carrinho">
-        <h2>Carrinho</h2>
-        <div class="produto">
+        <section id="carrinho">
+          <h2>Carrinho</h2>
+          <div class="produto">
+            <div>
+              <img src="imgs/x-burguer.jpg" alt="" />
+            </div>
+
+            <div>
+              <h3>Produto</h3>
+              <p>Descrição</p>
+            </div>
+
+            <div>
+              <p>Quantidade</p>
+              <input type="number" name="quantidadeProdutos" id="" />
+            </div>
+          </div>
+
+          <div class="produto">
+            <div>
+              <img src="imgs/x-burguer.jpg" alt="" />
+            </div>
+
+            <div>
+              <h3>Produto</h3>
+              <p>Descrição</p>
+            </div>
+
+            <div>
+              <p>Quantidade</p>
+              <input type="number" name="quantidadeProdutos" id="" />
+            </div>
+          </div>
+        </section>
+
+        <section id="finalizar">
           <div>
-            <img src="imgs/x-burguer.jpg" alt="" />
+            <label for="">Entregar</label>
+            <input type="radio" name="entrega" id="" />
+            <label for="">Buscar</label>
+            <input type="radio" name="entrega" id="" />
           </div>
 
           <div>
-            <h3>Produto</h3>
-            <p>Descrição</p>
+            <label for="">Entrega: 0</label>
+            <label for="">Total: $$</label>
           </div>
 
           <div>
-            <p>Quantidade</p>
-            <input type="number" name="" id="" />
+            <button type="submit">Confirmar</button>
+            <button type="reset">Cancelar</button>
           </div>
-        </div>
-
-        <div class="produto">
-          <div>
-            <img src="imgs/x-burguer.jpg" alt="" />
-          </div>
-
-          <div>
-            <h3>Produto</h3>
-            <p>Descrição</p>
-          </div>
-
-          <div>
-            <p>Quantidade</p>
-            <input type="number" name="" id="" />
-          </div>
-        </div>
-      </section>
-
-      <section id="finalizar">
-        <div>
-          <label for="">Entregar</label>
-          <input type="checkbox" name="" id="" />
-          <label for="">Buscar</label>
-          <input type="checkbox" name="" id="" />
-        </div>
-
-        <div>
-          <label for="">Entrega: 0</label>
-          <label for="">Total: $$</label>
-        </div>
-
-        <div>
-          <input type="button" value="Cancelar" />
-          <input type="button" value="Finalizar" />
-        </div>
-      </section>
+        </section>
+      </form>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="../js/register.js"></script>
   </body>
 </html>
