--- a/LogicaDeProgramação/listaDeExercícios/lista4.html
+++ b/LogicaDeProgramação/listaDeExercícios/lista4.html
@@ -9,18 +9,110 @@
 </head>
 <body>
     <script>
-        var contadorHoras=0
-        function ex15(horaInicial, minutoInicial, horaFinal, minutoFinal){
-            for(horaInicial; horaInicial!=horaFinal; horaInicial++){
-                contadorHoras+=1
-                if(horaInicial==24){
-                    horaInicial=0
+
+        function ex3(){
+            res=[]
+            for(let i = 100;i>=1;i--){
+                res.push(i)
+            }
+            console.log(res)
+        }
+        ex3()
+
+        function ex4(){
+            res=[]
+            for(let i=1;i<=200;i+=2){
+                res.push(i)
+            }
+            console.log(res)
+        }
+        ex4()
+
+        function ex5(n){
+            res=[]
+            for(let i=1;i<=10;i++){
+                res.push(n*i)
+            }
+            console.log(res)
+        }
+        ex5(5)
+
+        function ex6(n1,n2){
+            res=[]
+            if(n2>n1){
+                for(let i=n1;i<=n2;i++){
+                    res.push(i)
+                }
+                console.log(res)
+            }
+        }
+        ex6(5,10)
+
+        function ex7(arr){
+            maior=-Infinity
+            menor=Infinity
+            for(let i=0;i<arr.length;i++){
+                if(arr[i]==0){
+                    break
+                }else{
+                    if(arr[i]>maior){
+                        maior=arr[i]
+                    }
+                    if(arr[i]<menor){
+                        menor=arr[i]
+                    }
                 }
             }
-            console.log(contadorHoras)
+            console.log(maior,menor)
         }
-        ex15(15,0,1,0)
+        ex7([6,5,43,7,4,6,0,100])
+
+        function ex8(arr){
+            menos21 = 0
+            mais50 = 0
+            total = 0
+            c = 0
+            for(let i = 0;i<arr.length;i++){
+                if(arr[i]==-1){
+                    break
+                }
+                else{
+                    total+=arr[i]
+                    c+=1
+                    if(arr[i]<21){
+                        menos21+=1
+                    }
+                    else if(arr[i]>50){
+                        mais50+=1
+                    }
+                }
+            }
+            media=total/c
+            console.log(menos21,mais50,media)
+        }
+        ex8([3,67,34,21,34,22,18,15,99,-1,21,213141,21321])
+
+        function ex9(arr){
+            ptsChute=0
+            ptsSoco=0
+            ptsMagia=0
+            for(let i =0;i<arr.length;i++){
+                if(arr[i]==5){
+                    ptsChute+=2
+                }
+                else if(arr[i]==6){
+                    ptsSoco+=4
+                }
+                else if(arr[i]==7){
+                    ptsMagia+=10
+                }
+                else{
+                    break
+                }
+            }
+            console.log(`Qtd Chutes: ${ptsChute/2}, Pts Chutes: ${ptsChute}, Qtd Soco: ${ptsSoco/4}, Pts Soco: ${ptsSoco}, Qtd Magia: ${ptsMagia/10}, Pts Magia: ${ptsMagia}`)
+        }
+        ex9([5,6,7,5,6,5,0,7])
     </script>
-    
 </body>
 </html>
